# ASCEND

./: .gitignore  ARCHITECTURE.md  CONFIG_PLUGIN_DESIGN.md  CONFIG_QUANT.md  DEVELOPER_GUIDE.md  DOCUMENTATION.md  PROJECT_CONFIGS.md  PROJECT_STRUCTURE.md  PROTOCOLS_DESIGN.md  QUANT_DESIGN.md  README.md  pyproject.toml  requirements.txt  test_ashare_plugin.py  test_ashare_plugin_direct.py  test_plugin_interaction.py  test_protocol_fix.py  validate_ashare_refactor.py
ascend/: __init__.py  ascend.py
ascend/agent_plugins/: sb3.py
ascend/config/: __init__.py  loader.py  parser.py  validator.py
ascend/core/: __init__.py  agents.py  cognition.py  environments.py  exceptions.py  features.py  knowledge.py  monitor.py  policy.py  protocols.py  safety.py  types.py
ascend/plugin_manager/: __init__.py  base.py  discovery.py  env_utils.py  manager.py  types.py  version_utils.py
ascend/plugins/: __init__.py  base.py  discovery.py  manager.py  rl_sb3.py  sb3.py  types.py
examples/: plugin_interaction_example.py
examples/basic_usage/: basic_example.py  config.yaml  test_environment.py
examples/example_usage/: config.yaml  data_plugins_demo.py
examples/full_integration/: config.yaml  quant_system_demo.py
examples/pipe_usage/: config.yaml  plugin_interaction_example.py
examples/stock_scoring/: config.yaml  stock_scoring_cli.py  stock_scoring_lib.py
examples/trading_agent/: config.py  trading_env.py
quant_plugins/: README_ASHARE.md  README_STOCK_SCORING.md  __init__.py  full_integration_example.py  performance_tools.py  run_stock_scoring.py  stock_scoring_selection.py  test_ashare_plugin.py  test_fixes.py
quant_plugins/backtest_plugins/: __init__.py  daily_backtest_engine_plugin.py  performance_evaluator_plugin.py
quant_plugins/config/: quant_config.yaml  stock_scoring_config.json  symbols.txt
quant_plugins/data_plugins/: __init__.py  ashare_data_plugin.py  data_preprocessing_plugin.py  tushare_data_plugin.py  warehouse_storage_plugin.py
quant_plugins/evaluator_plugins/: __init__.py  advanced_performance_plugin.py  basic_performance_plugin.py  core_performance_evaluator.py
tests/fixes/: test_fixes.py
trained_agent/: config.json
(+13 files in other folders)
