
[project]
name = "ascend-framework"
version = "0.1.0"
description = "Agent-Native System with Cognitive Embedding for Decision-Making"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "ASCEND Team", email = "contact@ascend.ai"}
]

dependencies = [
    "pyyaml>=6.0",
    "typing-extensions>=4.0",
    "importlib-metadata>=4.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "setuptools>=68.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "tushare>=1.3.0",
    "pyarrow>=12.0.0",
    "feather-format>=0.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.1.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.0",
]
llm = [
    "openai>=1.0",
    "transformers>=4.30",
    "sentencepiece>=0.1",
    "tokenizers>=0.13",
]
rl = [
    "stable-baselines3>=2.0",
    "gymnasium>=0.28",
    "torch>=2.0",
    "tensorboard>=2.0",
]
monitoring = [
    "wandb>=0.15",
    "mlflow>=2.0",
]

quant = [
    "TA-Lib>=0.4.0"
]


[tool.setuptools]
packages = ["ascend"]

[project.entry-points."ascend.plugins"]
# 示例插件入口点
demo_plugin = "ascend.plugins.demo:DemoPlugin"

[project.urls]
Homepage = "https://github.com/ascend-ai/ascend"
Documentation = "https://ascend-ai.github.io/ascend"
Repository = "https://github.com/ascend-ai/ascend"
Issues = "https://github.com/ascend-ai/ascend/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ascend --cov-report=html -x"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
